FIX CONTROLS