@@ -1,51 +1,44 @@
-
-
 plugins {
-    id "jaci.openrio.gradle.GradleRIO" version "2017.1.1"
+    id "java"
+    id "eclipse"
+    id "idea"
+    id "jaci.openrio.gradle.GradleRIO" version "2017.11.27"
 }
 
+def TEAM = 1252
+def ROBOT_CLASS = "org.usfirst.frc.team1251.Robot"
 
-apply plugin: "java"
-apply plugin: "eclipse"
-apply plugin: "idea"
-
-frc {
-    team = "1252"
-    robotClass = "org.usfirst.frc.team1251.Robot"
-
-    //runArguments = "-XX:+AggressiveOpts"              // The command-line arguments to launch your jar with. By default, there are none. Not used if robotCommand set
-    useDebugCommand = false                           // Set to true if you want to use a remote debugger with your robot program. Not used if robotCommand is set.
+// Define my targets (RoboRIO) and artifacts (deployable files)
+// This is added by GradleRIO's backing project EmbeddedTools.
+deploy {
+    targets {
+        target("roborio", jaci.openrio.gradle.frc.RoboRIO) {
+            team = TEAM
+        }
+    }
+    artifacts {
+        artifact('frcJava', jaci.openrio.gradle.frc.FRCJavaArtifact) {
+            targets << "roborio"
+        }
+    }
 }
 
-wpi {
-    wpilibVersion = "+"                   // The WPILib version to use. For this version of GradleRIO, must be a 2017 version
-    ntcoreVersion = "+"                   // The NetworkTables Core version to use.
-    opencvVersion = "+"                   // The OpenCV version to use
-    cscoreVersion = "+"                   // The CSCore version to use
-
-    talonSrxVersion = "+"                 // The CTRE Toolsuite (Talon SRX) version to use.
-}
-
+// Defining my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX)
+// and NavX.
 dependencies {
     compile wpilib()
-    compile talonSrx()
-
-    // Use these to link your own third-party device libraries (e.g. navX)
-    compile fileTree(dir: 'libs', include: '**/*.jar')
-    //native  fileTree(dir: 'libs', include: '**/*.so') errors out and idk why
+    compile ctre()
+    compile navx()
 }
 
-
-def robotManifest = {
-  attributes 'Main-Class': 'edu.wpi.first.wpilibj.RobotBase'
-  attributes 'Robot-Class': frc.robotClass
-}
-
+// Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
+// in order to make them all available at runtime. Also adding the manifest so WPILib
+// knows where to look for our Robot Class.
 jar {
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest robotManifest
+    manifest jaci.openrio.gradle.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.2.1'
+    gradleVersion = '4.2.1'
 }
